--- a/Testing Enviroment.html
+++ b/Testing Enviroment.html
@@ -33,31 +33,9 @@
         
     </head>
     
-     <body id="page-top" data-spy="scroll" data-target=".navbar" data-offset="50">
+     <body id="page-top">
     <!-- Navigation -->
-     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#home">Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#projects">How it Works</a>
-             <li class="nav-item">
-              <a class="nav-link" href="#features">Features</a>
-             <li class="nav-item">
-              <a class="nav-link" href="#signup">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!--<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +56,7 @@
           </ul>
         </div>
       </div>
-    </nav>-->
+    </nav>
 
     <!-- Header -->
     <header class="masthead">
