--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
              <li class="nav-item">
               <a class="nav-link" href="#features">Features</a>
               <li class="nav-item">
-              <a class="nav-link" href="#signup">Mailing</a>
+              <a class="nav-link" href="#signup">Mailing List</a>
              <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
